# pokerth

./: CMakeLists.txt  CPackConfig.cmake  DefineOptions.cmake  deploy.pri  pokerth.pro  pokerth.sh  pokerth_db.cmake  pokerth_game.pro  pokerth_lib.cmake  pokerth_lib.pro  pokerth_protocol.cmake  pokerth_protocol.pro  pokerth_qml.cmake  pokerth_qml.pro  pokerth_server.pro
click/: manifest.json  pokerth.desktop
cmake/Modules/: CLICKInstallDirs.cmake
cmake/projects/: CMakeLists.txt
cmake/projects/lib/: CMakeLists.txt
cmake/projects/qml/: CMakeLists.txt
data/: CMakeLists.txt
src/: pokerth_qml.cpp  singleton.h
src/gui/qml/: chatsortmodel.cpp  chatsortmodel.h  configwrapper.cpp  configwrapper.h  customqmlapplicationengine.cpp  customqmlapplicationengine.h  gamedataclass.cpp  gamedataclass.h  gamemodel.cpp  gamemodel.h  gamesortmodel.cpp  gamesortmodel.h  guiwrapper.cpp  guiwrapper.h  imageprovider.cpp  imageprovider.h  manager.cpp  manager.h  player.cpp  player.h  playermodel.cpp  playermodel.h  playersortmodel.cpp  playersortmodel.h  qmlcard.cpp  qmlcard.h  qmlenums.cpp  qmlenums.h  qmlgame.cpp  qmlgame.h  qmlplayer.cpp  qmlplayer.h  qmlserver.cpp  qmlserver.h  roleitemmodel.cpp  roleitemmodel.h  servermodel.cpp  servermodel.h  sortfilterproxymodel.cpp  sortfilterproxymodel.h  (+4 more)
src/gui/qml/resources/: cflags  emotes  pokerth.qrc  pokerth_qml.qrc  pokerth_ubuntu_qml.qrc
src/gui/qml/resources/qml/: BlindsWindow.qml  Card.qml  CardObj.qml  GameWindow.qml  Hand.qml  LoadingWindow.qml  LobbyWindow.qml  LoginWindow.qml  Main.qml  NewGameDialog.qml  PlayerObj.qml  StartWindow.qml  createComponent.js
src/gui/qml/resources/ubuntu-qml/: BlindsWindow.qml  GameWindow.qml  LoadingWindow.qml  Main.qml  Main2.qml  NewGameDialog.qml  Player.qml  Star.qml  Stars.qml
src/gui/qml/styles/: gametablestylereader.cpp  gametablestylereader.h
src/gui/qt/qttools/: qttoolswrapper.cpp
src/gui/qt/qttools/qthelper/: qthelper.cpp
